--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "html-pdf-node": "^1.0.8",
     "http": "^0.0.1-security",
     "jsdom": "^24.0.0",
+    "nodemailer": "^6.9.13",
     "path": "^0.12.7",
     "pdf-creator-node": "^1.4.1",
     "pdfkit": "^0.15.0",
-    "puppeteer": "^22.8.1"
+    "puppeteer": "^22.10.0",
+    "xml2js": "^0.6.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
